DeveloperOrg/force-app/main/default/objects/hiring_manger__c/hiring_manger__c.object-meta.xml
<CustomObject>
    <label>hiring manger</label>
    <nameField>
        <label>hiring manger Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>hiring mangers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>