DeveloperOrg/force-app/main/default/objects/hiring_manger__c/fields/Dis__c.field-meta.xml
<CustomField>
    <fullName>Dis__c</fullName>
    <label>Designation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HR Executive</fullName>
            </value>
            <value>
                <fullName>Sr. HR Executive</fullName>
            </value>
            <value>
                <fullName>Recruiment Specialist</fullName>
            </value>
            <value>
                <fullName>HR Manager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>