DeveloperOrg/force-app/main/default/objects/hiring_manger__c/fields/location__c.field-meta.xml
<CustomField>
    <fullName>location__c</fullName>
    <label>location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hyderabad</fullName>
            </value>
            <value>
                <fullName>Bangalore</fullName>
            </value>
            <value>
                <fullName>Chennai</fullName>
            </value>
            <value>
                <fullName>Pune</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>